# api

./: .env.example  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  LICENSE  docker-compose.yaml  drizzle.config.mjs  drizzle.config.ts  eslint.config.mjs  migrate.ts  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  pyrightconfig.json  renovate.json  tsconfig.json  vitest.config.mts  vitest.config.ts
.github/workflows/: build-image.yaml  ci.yaml  tests.yaml
db/: 20250310205529_shopping-list.sql
db/migrations/: 20250217210212_initial.sql  20250412122752_collection.sql  20250412122915_recipe.sql  20250425063554_shopping-list.sql
dev_credentials/: client.crt  client.key
docker/: docker-compose.yaml
http_requests/: access-token.http  http-client.env.json  images.http  recipe.http  scraper.http
migrations/: 2025-02-16T22:13:48Z_initial.ts
schema/: 0000_chunky_northstar.sql  0000_flippant_leopardon.sql
schema/meta/: 0000_snapshot.json  _journal.json
scripts/: fake-data.py
src/: server.ts
src/db/: db.ts  schema.ts  types.d.ts
src/db/repository/: RecipeRepository.test.ts  RecipeRepository.ts
src/main/java/com/twosmallonions/api/: ApiApplication.java  ApiExceptionHandler.java  RestClientConfiguration.java  SecurityConfiguration.java  UUID7Generator.java  UUIDv7Sequence.java
src/main/java/com/twosmallonions/api/exceptions/: ErrorResponse.java  ResourceNotFoundException.java  ScraperConfigurationException.java
src/main/java/com/twosmallonions/api/images/: ImageFile.java  ImageMapper.java  ImageTarget.java  ImageUploadConfigProperties.java  ImageUploadController.java  ImageUploadService.java  ImageUploader.java  ImgproxyUriBuilder.java  RecipeImage.java  RecipeImageRepository.java  StepImage.java  StepImageRepository.java
src/main/java/com/twosmallonions/api/ingredients/: Ingredient.java  IngredientService.java  Ingredients.java  IngredientsMapper.java  IngredientsRepository.java  MeasurementSystem.java  SortedIngredients.java  UpdateIngredientsService.java
src/main/java/com/twosmallonions/api/ingredients/dto/: CreateIngredientDTO.java  IngredientDTO.java
src/main/java/com/twosmallonions/api/recipe/: Recipe.java  RecipeController.java  RecipeMapper.java  RecipeRepository.java  RecipeService.java
src/main/java/com/twosmallonions/api/recipe/dto/: CreateRecipeDTO.java  FullRecipeDTO.java  IdOnly.java  RecipeDTO.java  UpdateRecipeDTO.java
src/main/java/com/twosmallonions/api/recipeimport/: RecipeImportController.java  RecipeImportService.java
src/main/java/com/twosmallonions/api/services/parsers/ingredient/: IngredientParser.java  IngredientParserFactory.java  SimpleIngredientParser.java
src/main/java/com/twosmallonions/api/services/scrape/: RecipeScraper.java  RecipeScraperFactory.java
src/main/java/com/twosmallonions/api/services/uploaders/: S3Service.java
src/main/java/com/twosmallonions/api/steps/: Step.java  StepController.java  StepMapper.java  StepRepository.java  StepService.java  Steps.java  UpdateStepsService.java
src/main/java/com/twosmallonions/api/steps/dto/: CreateStepDTO.java  IngredientHighlight.java  StepDTO.java  StepTimer.java  StepsDTO.java
src/main/java/com/twosmallonions/api/steps/ingredient/: StepIngredient.java  StepIngredientDTO.java  StepIngredientRepository.java
src/main/java/com/twosmallonions/api/tags/: Tag.java  TagController.java  TagMapper.java  TagRepository.java  TagService.java
src/main/java/com/twosmallonions/api/tags/dto/: CreateTagDTO.java  TagDTO.java
src/main/proto/: recipe.proto
src/main/resources/: application.yml
src/main/resources/db/changelog/: db.changelog-master.yaml
src/main/resources/db/changelog/changesets/: 001_initial.sql  002_ingredients.sql  003_ingredients_steps.sql  003_steps.sql  004_user_tags.sql  005_images.sql
src/services/: RecipeService.test.ts  RecipeService.ts
src/services/__snapshots__/: RecipeService.test.ts.snap
src/test/java/com/twosmallonions/api/: ApiApplicationTests.java
src/test/java/com/twosmallonions/api/integrationtests/recipe/: TestRecipeCRUD.java
src/test/resources/: application-test.yml
src/tso_api/: auth.py  config.py  db.py  dependency.py  exceptions.py  image.py  import_util.py  main.py  schema.py
src/tso_api/models/: asset.py  base.py  collection.py  query_params.py  recipe.py  shopping_list.py  user.py
src/tso_api/repository/: __init__.py  asset_repository.py  collection_repository.py  ingredient_repository.py  instruction_repository.py  recipe_repository.py  repository.py  shopping_list_repository.py  shoppint_list_repository.py  user_repository.py
src/tso_api/routers/: __init__.py  asset.py  collection.py  recipe.py  shopping_list.py  user.py
src/tso_api/schema/: recipe_schema.py
src/tso_api/service/: __init__.py  base_service.py  collection_service.py  recipe_asset.py  recipe_import_service.py  recipe_service.py  shopping_list_service.py  user_service.py
src/tso_api/service/scraper/html/: http_request_scraper.py
src/types/: recipe.ts
tests/: conftest.py
tests/api/: conftest.py  test_shopping_list.py
tests/repository/: conftest.py  test_asset_repository.py  test_collection_repository.py  test_recipe_repository.py  test_shopping_list_repository.py  test_user_repository.py
tests/service/: conftest.py  test_collection_service.py  test_recipe_asset.py  test_recipe_service.py  test_recipe_service_todo.py
(+5 files in other folders)
